--- a/src/components/CardKeyResult/viewMoreKr.css
+++ b/src/components/CardKeyResult/viewMoreKr.css
@@ -4,7 +4,11 @@
     border: none;
     width: 100%;
     background-color: rgb(243, 243, 243);
-    border-radius: 0.8em 0 0 0.8em;}
+    border-radius: 0.8em 0 0 0.8em;
+    padding:1rem
+    
+  }
+ 
 
   
 
@@ -24,7 +28,8 @@
     border-radius: 0.8em 0.8em 0 0;
     margin-left: 4em;
     border-radius: 1.3rem;
-
+    box-shadow:  2px 2px 1px rgb(0 0 0 / 20%)
+      
 }
 
 /* Comment */
